Working on generic engine stuff.
Added the engine singleton.
Added input.

--- a/src/GUST-Engine/CMakeLists.txt
+++ b/src/GUST-Engine/CMakeLists.txt
@@ -22,13 +22,27 @@ file(
 	"${CMAKE_SOURCE_DIR}/src/GUST-Engine/Utilities/*.hpp"
 )
 
+# Sources
+set(
+	GUST_ENGINE_SRCS
+	Engine.cpp
+)
+
+# Headers
+set(
+	GUST_ENGINE_HDRS
+	Engine.hpp
+)
+
 # Project Declaration
 ADD_LIBRARY(
 	GUST-Engine
 	${GUST_CORE} 
 	${GUST_GRAPHICS}
 	${GUST_UTILITIES}
-)
+	${GUST_ENGINE_SRCS}
+	${GUST_ENGINE_HDRS}
+)   
 
 # Grouping
 source_group("Core" FILES ${GUST_CORE})
