--- a/src/GUST-Testing/CMakeLists.txt
+++ b/src/GUST-Testing/CMakeLists.txt
@@ -41,5 +41,5 @@ target_link_libraries(
 add_custom_command(
 	TARGET GUST-Testing POST_BUILD
 	COMMAND ${CMAKE_COMMAND} -E copy_directory
-	${CMAKE_SOURCE_DIR}/src/Shaders/Output $<TARGET_FILE_DIR:GUST-Testing>/Shaders
+	${CMAKE_SOURCE_DIR}/src/Shaders/Output $<TARGET_FILE_DIR:GUST-Testing>/../Shaders
 )
