Did a ton of stuff.
Fixed the thread pool with fixed rendering.
Added a MeshRenderer component.
Added material creation to resource managers.
Changed i++ to ++i for those precious cycles.

--- a/src/GUST-Testing/CMakeLists.txt
+++ b/src/GUST-Testing/CMakeLists.txt
@@ -37,9 +37,15 @@ target_link_libraries(
 	# ${LINK_LIBRARY}
 )
 
-# Move shader folder into build directory
+# Move shader folder and mesh into build directory
 add_custom_command(
 	TARGET GUST-Testing POST_BUILD
 	COMMAND ${CMAKE_COMMAND} -E copy_directory
 	${CMAKE_SOURCE_DIR}/src/Shaders/Output $<TARGET_FILE_DIR:GUST-Testing>/../Shaders
+)
+
+add_custom_command(
+	TARGET GUST-Testing POST_BUILD
+	COMMAND ${CMAKE_COMMAND} -E copy_directory
+	${CMAKE_SOURCE_DIR}/src/Meshes $<TARGET_FILE_DIR:GUST-Testing>/../Meshes
 )
