Did some refactoring.
Seperated the different engine modules into different projects.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,6 @@
 # Other subdirectories
+add_subdirectory(GUST-Core)
+add_subdirectory(GUST-Graphics)
+add_subdirectory(GUST-ECS)
 add_subdirectory(GUST-Engine)
 add_subdirectory(GUST-Testing)
