Working on physics.
Added Bullet Physics as a dependency.
Added physics project.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,12 +11,14 @@ set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 find_package(SDL2 REQUIRED)
 find_package(VULKAN REQUIRED)
 find_package(GLM REQUIRED)
+find_package(BULLET REQUIRED)
 
 # Includes
 include_directories(${CMAKE_SOURCE_DIR}/dependencies)
 include_directories(${SDL2_INCLUDE_DIR})
 include_directories(${VULKAN_INCLUDE_DIR})
 include_directories(${GLM_INCLUDE_DIRS})
+include_directories(${Bullet_INCLUDE_DIRS})
 
 # Release build
 set(CMAKE_BUILD_TYPE Release)
