--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,5 +2,6 @@
 add_subdirectory(GUST-Core)
 add_subdirectory(GUST-Graphics)
 add_subdirectory(GUST-ECS)
+add_subdirectory(GUST-Physics)
 add_subdirectory(GUST-Engine)
 add_subdirectory(GUST-Testing)
