Working on a character controller and misc.
Improved child updating for transforms.
Created a basic character controller.
Added support for constraints.

--- a/src/GUST-Engine/CMakeLists.txt
+++ b/src/GUST-Engine/CMakeLists.txt
@@ -8,6 +8,7 @@ set(
 	MeshRenderer.cpp
 	ResourceManager.cpp
 	Colliders.cpp
+	CharacterController.cpp
 )
 
 # Headers
@@ -20,6 +21,7 @@ set(
 	MeshRenderer.hpp
 	ResourceManager.hpp
 	Colliders.hpp
+	CharacterController.hpp
 )
 
 # Project declaration
