Refactoring and bug fixing.
Added some macros for debugging.
Went through and changed the assert macro to the custom one.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
 # C++ Version
 set (CMAKE_CXX_STANDARD 14)
+set (CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Packages
 find_package(SDL2 REQUIRED)
